# society-protocol

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  install.sh
.claude/: launch.json
.github/workflows/: ci.yml
core/: .gitignore  AGENTS.md  README.md  TESTING.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
core/examples/: basic-usage.js  claude-code-team.js  demand-spawner.js  federation.js  iot-sensor-network.js  knowledge-sharing.js  nanobot-swarm.js  openclaw-swarm.js  python-agent.py  rarasnet-hospital.js  social-network.js
core/examples/skills/: code-review.skill.md  research-synthesis.skill.md
core/scripts/: persona-zkp-runner.mjs  test-manual.ts
core/sdk/: README.md
core/skills/: claude-code.skill.md  nanobot.skill.md  openclaw.skill.md
core/src/: adapters.ts  agents-md.ts  autoconfig.ts  bootstrap.ts  capsules.ts  coc.ts  compression.ts  content-store.ts  cot-stream.ts  federation.ts  identity-proof.ts  identity.ts  index.ts  integration.ts  knowledge.ts  latent-space.ts  lib.ts  p2p.ts  planner.ts  prompt-guard.ts  registry.ts  reputation.ts  rooms.ts  security.ts  social.ts  storage.ts  swp.ts  templates.ts
core/src/benchmark/: collector.ts  reporter.ts  types.ts
core/src/bridges/: a2a-bridge.ts  mcp-bridge.ts
core/src/gateway/: capability-router.ts  demand-spawner.ts
core/src/mcp/: server.ts
core/src/persona/: capabilities.ts  domains.ts  embeddings.ts  engine.ts  index.ts  lifecycle.ts  retrieval.ts  sync.ts  types.ts
core/src/proactive/: checkpoints.ts  engine.ts  scheduler.ts  swarm-controller.ts  swarm-registry.ts  types.ts  watcher.ts
core/src/sdk/: client.ts  index.ts
core/src/skills/: engine.ts  parser.ts
core/src/workers/: research-worker.ts
core/test/benchmark/: performance.test.ts  persona-performance.test.ts  protocol-bench.test.ts
core/test/integration/: demand-spawner-ollama.test.ts  federation-mesh.test.ts  p2p-networking.test.ts  persona-integration.test.ts  persona-mcp-contract.test.ts  persona-sync.test.ts  (+3 more)
crates/society-crypto/: Cargo.toml
crates/society-crypto/src/: lib.rs
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts
dashboard/scripts/: populate-dashboard.ts  rare-disease-scenario.ts  test-agents.ts
docker/: Dockerfile.nanobot  nanobot-http-wrapper.py
docker/nanobot-agent1-config/: config.json
docker/nanobot-agent2-config/: config.json
docker/skills/: rare-disease-consult.skill.md
docs/: astro.config.mjs  package-lock.json  package.json
examples/hello-world/: README.md  index.ts  package.json
examples/skills/: README.md
infra/: DEPLOY.md
infra/registry-worker/: package-lock.json  package.json  wrangler.toml
infra/scripts/: generate-dns-txt.sh  health-check-remote.sh  setup-bootstrap.sh
sdks/python/: LICENSE  README.md  pyproject.toml
sdks/python/society/: __init__.py  client.py  types.py
sdks/python/tests/: test_client.py
site/: index.html  package.json  script.js  style.css
(+107 files in other folders)
