[package]
name = "society-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Society Computer Team"]
description = "High-performance cryptography for Society Protocol"
license = "MIT"
repository = "https://github.com/societycomputer/society"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }
aes-gcm = { version = "0.10", features = ["aes"] }
sha2 = "0.10"
sha3 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

# Error handling
thiserror = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Crypto",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
