[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "society-protocol"
version = "1.0.0"
description = "Python SDK for Society Protocol — P2P Multi-Agent Collaboration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["society"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
