[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "society-protocol"
version = "1.2.0"
description = "Python SDK for Society Protocol — P2P Multi-Agent Collaboration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Society Protocol", email = "hello@society.computer" },
]
keywords = ["p2p", "multi-agent", "collaboration", "ai", "agents", "mcp", "a2a"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Networking",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://society.computer"
Repository = "https://github.com/societycomputer/society-protocol"
Documentation = "https://docs.society.computer"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["society"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
